--- a/index.html
+++ b/index.html
@@ -30,9 +30,21 @@
     .list>div{display:flex;justify-content:space-between;align-items:center;gap:10px;background:#0b1426;border:1px solid var(--border);border-radius:14px;padding:10px}
     .muted{color:var(--dim)}
 
-    .head{display:grid;grid-template-columns:1.3fr 80px 110px 110px 110px 32px;gap:8px;color:var(--dim);font-size:12px}
-    .line{display:grid;grid-template-columns:1.3fr 80px 110px 110px 110px 32px;gap:8px;align-items:center}
-    .line>div,.line>button{background:#0b1426;border:1px solid var(--border);border-radius:12px;padding:10px}
+    /* widen Your Offer + Remove columns and add breathing room */
+.head{
+  display:grid;
+  grid-template-columns: 1.3fr 80px 110px 110px 140px 48px;
+  gap:12px;
+  color:var(--dim);
+  font-size:12px;
+}
+.line{
+  display:grid;
+  grid-template-columns: 1.3fr 80px 110px 110px 140px 48px;
+  gap:12px;
+  align-items:center;
+}
+.line > button{ min-width:48px; text-align:center; }
 
     .totals{display:grid;grid-template-columns:1fr 280px;gap:14px}
     .box{background:#0b1426;border:1px solid var(--border);border-radius:16px;padding:14px}
