--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="kv"><span class="muted">Original total</span><span id="t_orig" class="amount">—</span></div>
         <div class="kv"><span class="muted">Discounted baseline</span><span id="t_disc" class="amount">—</span></div>
         <div class="kv"><span>Patient pays</span><span id="t_pay" class="amount">—</span></div>
-        <div class="savings"><div class="label"><div class="spark"></div><strong>Savings vs original</strong></div><div id="t_sav" class="amount">—</div></div>
+        <div class="savings"><div class="label"><div class="spark"></div><strong>Savings</strong></div><div id="t_sav" class="amount">—</div></div>
       </div>
       <div class="box">
         <div class="col">
